<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightgrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--me_top-->
            <LinearLayout
                android:id="@+id/me_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/account_round" />

                <TextView
                    android:id="@+id/me_homepage_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:ellipsize="start"
                    android:maxLines="1"
                    android:maxWidth="200dp"
                    android:text="@string/app_name"
                    android:textColor="@color/darkgray"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_homepage_text"
                        android:textColor="@color/lightgrey"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_common_right_arrow" />
                </LinearLayout>
            </LinearLayout>
            <!--me_top-->


            <!--exit-->
            <TextView
                android:id="@+id/me_item_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/me_exit_text"
                android:textColor="@color/red"
                android:textSize="14sp" />
            <!--exit-->
            <!--version-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/me_app_version" />
            <!--version-->


        </LinearLayout>


    </ScrollView>

</LinearLayout>