<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:background="@color/bottom_bg"
    android:gravity="center"
    android:orientation="horizontal">
    <!--record-->
    <LinearLayout
        android:id="@+id/bottom_record"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bottom_ico_record"
            android:layout_width="@dimen/bottom_icon_size"
            android:layout_height="@dimen/bottom_icon_size"
            android:src="@drawable/icon_train_pressed" />

        <TextView
            android:id="@+id/bottom_txt_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_record"
            android:textColor="@color/bottom_tab_pressed"
            android:textSize="@dimen/bottom_txt_size" />
    </LinearLayout>
    <!--record-->
    <!--general-->
    <LinearLayout
        android:id="@+id/bottom_general"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bottom_ico_general"
            android:layout_width="@dimen/bottom_icon_size"
            android:layout_height="@dimen/bottom_icon_size"
            android:src="@drawable/icon_found_unpressed" />

        <TextView
            android:id="@+id/bottom_txt_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_general"
            android:textColor="@color/bottom_tab_normal"
            android:textSize="@dimen/bottom_txt_size" />
    </LinearLayout>
    <!--general-->

    <!--me-->
    <LinearLayout
        android:id="@+id/bottom_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bottom_ico_me"
            android:layout_width="@dimen/bottom_icon_size"
            android:layout_height="@dimen/bottom_icon_size"
            android:src="@drawable/icon_me_unpressed" />

        <TextView
            android:id="@+id/bottom_txt_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_me"
            android:textColor="@color/bottom_tab_normal"
            android:textSize="@dimen/bottom_txt_size" />
    </LinearLayout>
    <!--me-->


</LinearLayout>